add proposal block

--- a/src/html/section-top.html
+++ b/src/html/section-top.html
@@ -33,7 +33,7 @@
         <div class="section-top__slider-point"></div>
       </div>
       <div class="section-top__slider-btns-block">
-        <div class="section-top__slider-btn section-top__slider-btn-prev">
+        <div class="slider-btn slider-btn-prev">
           <svg
             width="41"
             height="41"
@@ -47,7 +47,7 @@
             />
           </svg>
         </div>
-        <div class="section-top__slider-btn section-top__slider-btn-next">
+        <div class="slider-btn slider-btn-next">
           <svg
             width="41"
             height="41"
