--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
   <body id="main-body">
     <main>
       @@include('./html/header.html',{ page: "index"})
-      @@include('./html/section-top.html')
+      @@include('./html/section-top.html') @@include('./html/proposal.html')
     </main>
 
     <script src="./js/jquery.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/app.min.js"></script>
   </body>
 </html>
