add demand block

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <main>
       @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html') @@include('./html/proposal.html')
+      @@include('./html/demand.html')
     </main>
 
     <script src="./js/jquery.min.js"></script>
