add block reviews

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html') @@include('./html/proposal.html')
       @@include('./html/demand.html') @@include('./html/economy.html')
+      @@include('./html/reviews.html')
     </main>
 
     <script src="./js/jquery.min.js"></script>
