added support for screens <601px for the block demand

--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,19 @@
   <body id="main-body">
     <!-- prettier-ignore -->
     <main>
-      @@include('./html/header.html',{ page: "index"})
+      <!-- @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html')
       @@include('./html/proposal.html')
-      @@include('./html/business-model.html')
+      @@include('./html/business-model.html') -->
       @@include('./html/demand.html')
-      @@include('./html/economy.html')
+      <!-- @@include('./html/economy.html')
       @@include('./html/galery.html')
       @@include('./html/reviews.html')
       @@include('./html/support.html')
       @@include('./html/steps.html')
       @@include('./html/cities.html')
       @@include('./html/bottom-block.html')
-      @@include('./html/footer.html', { page: "index"})
+      @@include('./html/footer.html', { page: "index"}) -->
     </main>
 
     <script src="./js/jquery.min.js"></script>
