--- a/src/html/economy.html
+++ b/src/html/economy.html
@@ -178,6 +178,16 @@
             </div>
           </div>
         </div>
+
+        <div class="economy__slider-points-block">
+          <div
+            class="economy__slider-point economy__slider-point_active"
+            id="economySliderPoint-0"
+          ></div>
+          <div class="economy__slider-point" id="economySliderPoint-1"></div>
+          <div class="economy__slider-point" id="economySliderPoint-2"></div>
+          <div class="economy__slider-point" id="economySliderPoint-3"></div>
+        </div>
       </div>
     </div>
   </div>
