--- a/src/html/section-top.html
+++ b/src/html/section-top.html
@@ -1,17 +1,64 @@
 <section class="section-top">
   <div class="section-top_bg-block">
     <div class="section-top_bg-track">
-      <div class="section-top_bg section-top_bg01"></div>
-      <div class="section-top_bg section-top_bg02"></div>
-      <div class="section-top_bg section-top_bg03"></div>
-      <div class="section-top_bg section-top_bg04"></div>
+      <div class="section-top_bg section-top_bg04 fake-slide">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title04">
+            организация поставок
+            <span class="text_green">независимо</span>
+            от экономической ситуации в стране
+          </h1>
+        </div>
+      </div>
+      <div class="section-top_bg section-top_bg01">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title01">
+            <span class="text_green">франшиза </span>по продаже apple
+          </h1>
+        </div>
+      </div>
+      <div class="section-top_bg section-top_bg02">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title02">
+            откройте магазин
+            <span class="text_green">или</span>
+            офис продаж appzone.co
+          </h1>
+        </div>
+      </div>
+      <div class="section-top_bg section-top_bg03">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title03">
+            cредняя чистая прибыль —
+            <span class="text_green">
+              от 350 000 до 800 000 рублей в месяц
+            </span>
+          </h1>
+        </div>
+      </div>
+      <div class="section-top_bg section-top_bg04 last-slide">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title04">
+            организация поставок
+            <span class="text_green">независимо</span>
+            от экономической ситуации в стране
+          </h1>
+        </div>
+      </div>
+      <div class="section-top_bg section-top_bg01">
+        <div class="container section-top__container">
+          <h1 class="title section-top__title section-top__title01">
+            <span class="text_green">франшиза </span>по продаже apple
+          </h1>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container section-top__container">
     <div class="section-top__usp">
-      <h1 class="title section-top__title section-top__title01">
+      <!-- <h1 class="title section-top__title section-top__title01">
         <span class="text_green">франшиза </span>по продаже apple
-      </h1>
+      </h1> -->
     </div>
     <p class="section-top__title-description">
       получите презентацию и финансовый план франшизы appzone.co
@@ -27,10 +74,11 @@
       <div class="section-top__slider-points-block">
         <div
           class="section-top__slider-point section-top__slider-point_active"
+          id="sectionTopPoint-0"
         ></div>
-        <div class="section-top__slider-point"></div>
-        <div class="section-top__slider-point"></div>
-        <div class="section-top__slider-point"></div>
+        <div class="section-top__slider-point" id="sectionTopPoint-1"></div>
+        <div class="section-top__slider-point" id="sectionTopPoint-2"></div>
+        <div class="section-top__slider-point" id="sectionTopPoint-3"></div>
       </div>
       <div class="section-top__slider-btns-block">
         <div class="slider-btn slider-btn-prev">
