--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <body id="main-body">
     <!-- prettier-ignore -->
     <main>
-      <!-- @@include('./html/header.html',{ page: "index"})
+      @@include('./html/header.html',{ page: "index"})
       @@include('./html/section-top.html')
-      @@include('./html/proposal.html')
-      @@include('./html/business-model.html') -->
-      @@include('./html/demand.html')
-      <!-- @@include('./html/economy.html')
+       @@include('./html/proposal.html') -->
+       <!--  @@include('./html/business-model.html') -->
+      <!-- @@include('./html/economy.html') -->
+      <!-- @@include('./html/demand.html')
       @@include('./html/galery.html')
       @@include('./html/reviews.html')
       @@include('./html/support.html')
