боваил мобилку,  добавил анимации

--- a/src/html/galery.html
+++ b/src/html/galery.html
@@ -1,37 +1,40 @@
 <section class="galery">
-  <div class="galery__content">
-    <div class="galery__content-left">
-      <div class="galery__content-left-img1" id="galery__ImgLeft-0">
-        <img src="@images/galery/galery__0.jpg" alt="" />
-      </div>
-      <div class="galery__content-left-img2" id="galery__ImgLeft-1">
-        <img src="@images/galery/galery__1.jpg" alt="" />
-      </div>
-    </div>
-    <div class="galery__content-center">
-      <div class="galery__content-center-img1" id="galery__Img-2">
-        <h2 class="galery__title">
-          развивайте<br />
-          собственный бизнес вместе с командой appzone.co
-        </h2>
-        <img src="@images/galery/galery__2.jpg" alt="" />
-      </div>
-      <div class="galery__content-center-bottom">
-        <div class="galery__content-center-img2" id="galery__ImgCenter-3">
-          <img src="@images/galery/galery__3.jpg" alt="" />
+  <div class="galery__sticky-block">
+    <div class="galery__content">
+      <div class="galery__content-left">
+        <div class="galery__content-left-img1" id="galery__ImgLeft-0">
+          <img src="@images/galery/galery__0.jpg" alt="" />
         </div>
-        <div class="galery__content-center-img3" id="galery__ImgCenter-4">
-          <img src="@images/galery/galery__4.jpg" alt="" />
+        <div class="galery__content-left-img2" id="galery__ImgLeft-1">
+          <img src="@images/galery/galery__1.jpg" alt="" />
         </div>
       </div>
-    </div>
-    <div class="galery__content-right">
-      <div class="galery__content-right-img1" id="galery__Img-5">
-        <img src="@images/galery/galery__5.jpg" alt="" />
+      <div class="galery__content-center">
+        <div class="galery__content-center-img1" id="galery__Img-2">
+          <h2 class="galery__title">
+            развивайте<br />
+            собственный бизнес вместе с командой appzone.co
+          </h2>
+          <img src="@images/galery/galery__2.jpg" alt="" />
+        </div>
+        <div class="galery__content-center-bottom">
+          <div class="galery__content-center-img2" id="galery__ImgCenter-3">
+            <img src="@images/galery/galery__3.jpg" alt="" />
+          </div>
+          <div class="galery__content-center-img3" id="galery__ImgCenter-4">
+            <img src="@images/galery/galery__4.jpg" alt="" />
+          </div>
+        </div>
       </div>
-      <div class="galery__content-right-img2" id="galery__ImgRight-6">
-        <img src="@images/galery/galery__6.jpg" alt="" />
+      <div class="galery__content-right">
+        <div class="galery__content-right-img1" id="galery__Img-5">
+          <img src="@images/galery/galery__5.jpg" alt="" />
+        </div>
+        <div class="galery__content-right-img2" id="galery__ImgRight-6">
+          <img src="@images/galery/galery__6.jpg" alt="" />
+        </div>
       </div>
     </div>
   </div>
+  <div class="galery__fake-height"></div>
 </section>
