--- a/src/html/proposal.html
+++ b/src/html/proposal.html
@@ -1,202 +1,219 @@
 <section class="proposal">
-  <div class="container proposal__container">
-    <div class="proposal__title-block">
-      <h2 class="title proposal__title">
-        предлагаем 2 перспективных формата сотрудничества —
-        <span class="text_green">
-          выбирайте для себя
-          <span class="proposal__title-offset">наиболее подходящий</span>
-        </span>
-      </h2>
+  <div class="proposal__container-top">
+    <div class="proposal__overflow-block">
+      <div class="container proposal__container">
+        <div class="proposal__title-block">
+          <h2 class="title proposal__title">
+            предлагаем 2 перспективных формата сотрудничества —
+            <span class="text_green">
+              выбирайте для себя
+              <span class="proposal__title-offset">наиболее подходящий</span>
+            </span>
+          </h2>
 
-      <div class="proposal__info-block">
-        <p class="proposal__info-block-text">
-          Бизнес-модели отличаются объёмом инвестиций и потенциалом дохода,
-          однако обе эффективны, перспективны и
-          <span class="text_heavy">проверены на собственном опыте.</span>
-        </p>
-      </div>
-    </div>
-    <div class="proposal__list-wrapper">
-      <div class="proposal__el-ellipse01">
-        <svg
-          width="536"
-          height="440"
-          viewBox="0 0 536 440"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M294.8 158.906C736.056 334.85 474.326 481.944 266.927 428.89C37.3216 314.04 0 225.154 0 129.027C0 32.9007 43.3495 0.460938 139.368 0.460938C179.053 0.460938 294.8 62.779 294.8 158.906Z"
-            fill="#3470FB"
-          />
-        </svg>
-      </div>
-      <div class="proposal__el-ellipse02">
-        <svg
-          width="632"
-          height="346"
-          viewBox="0 0 632 346"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <ellipse
-            cx="315.888"
-            cy="173.116"
-            rx="315.119"
-            ry="172.258"
-            fill="#3EB4FC"
-          />
-        </svg>
-      </div>
-      <div class="proposal__el-ellipse03">
-        <svg
-          width="552"
-          height="631"
-          viewBox="0 0 552 631"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            opacity="0.6"
-            d="M551.993 261.376C551.993 405.73 544.433 630.239 360.17 630.239C207.782 630.239 0.147217 405.73 0.147217 261.376C0.147217 117.022 123.682 0 276.07 0C428.458 0 551.993 117.022 551.993 261.376Z"
-            fill="#66BFFF"
-          />
-        </svg>
-      </div>
-      <div class="proposal__el-ellipse04">
-        <svg width="1012" height="595" viewBox="0 0 1012 595">
-          <ellipse
-            cx="506.057"
-            cy="297.838"
-            rx="519.629"
-            ry="271.079"
-            transform="rotate(-15.8696 506.057 297.838)"
-            fill="#EE55FC"
-          />
-        </svg>
-      </div>
-      <ul class="proposal__list">
-        <li class="proposal__el">
-          <div class="proposal__el-title-block">
-            <h3 class="proposal__el-title">магазин</h3>
-            <h3 class="proposal__el-num">01</h3>
+          <div class="proposal__info-block">
+            <p class="proposal__info-block-text">
+              Бизнес-модели отличаются объёмом инвестиций и потенциалом дохода,
+              однако обе эффективны, перспективны и
+              <span class="text_heavy">проверены на собственном опыте.</span>
+            </p>
           </div>
-          <div class="proposal__el-content-wrapper">
-            <div class="proposal__el-content">
-              <span class="proposal__el-subtitle">
-                для тех, кто
-                <span class="text_bold">нацелен на максимальную прибыль</span>
-              </span>
-              <span class="proposal__el-description">
-                полноценная торговая точка с обширным ассортиментом
-              </span>
+        </div>
+        <div class="proposal__list-wrapper">
+          <div class="proposal__el-ellipse01">
+            <svg
+              width="536"
+              height="440"
+              viewBox="0 0 536 440"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M294.8 158.906C736.056 334.85 474.326 481.944 266.927 428.89C37.3216 314.04 0 225.154 0 129.027C0 32.9007 43.3495 0.460938 139.368 0.460938C179.053 0.460938 294.8 62.779 294.8 158.906Z"
+                fill="#3470FB"
+              />
+            </svg>
+          </div>
+          <div class="proposal__el-ellipse02">
+            <svg
+              width="632"
+              height="346"
+              viewBox="0 0 632 346"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <ellipse
+                cx="315.888"
+                cy="173.116"
+                rx="315.119"
+                ry="172.258"
+                fill="#3EB4FC"
+              />
+            </svg>
+          </div>
+          <div class="proposal__el-ellipse03">
+            <svg
+              width="552"
+              height="631"
+              viewBox="0 0 552 631"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                opacity="0.6"
+                d="M551.993 261.376C551.993 405.73 544.433 630.239 360.17 630.239C207.782 630.239 0.147217 405.73 0.147217 261.376C0.147217 117.022 123.682 0 276.07 0C428.458 0 551.993 117.022 551.993 261.376Z"
+                fill="#66BFFF"
+              />
+            </svg>
+          </div>
+          <div class="proposal__el-ellipse04">
+            <svg width="1012" height="595" viewBox="0 0 1012 595">
+              <ellipse
+                cx="506.057"
+                cy="297.838"
+                rx="519.629"
+                ry="271.079"
+                transform="rotate(-15.8696 506.057 297.838)"
+                fill="#EE55FC"
+              />
+            </svg>
+          </div>
 
-              <ul class="proposal__el-list">
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">общие вложения:</div>
-                  <div class="proposal__el-list-el-value">до 5,4 млн ₽</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">площадь:</div>
-                  <div class="proposal__el-list-el-value">до 40 кв.м.</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">товарный запас:</div>
-                  <div class="proposal__el-list-el-value">до 4 млн ₽</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">
-                    средняя чистая прибыль:
-                  </div>
-                  <div class="proposal__el-list-el-value">
-                    800 000 рублей в месяц
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="proposal__el-slider">
-              <img
-                src="@images/proposal/proposal01.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
-              <img
-                src="@images/proposal/proposal02.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
-              <img
-                src="@images/proposal/proposal03.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
-            </div>
-          </div>
-        </li>
-        <li class="proposal__el">
-          <div class="proposal__el-title-block">
-            <h3 class="proposal__el-title">офис продаж</h3>
-            <h3 class="proposal__el-num">02</h3>
-          </div>
-          <div class="proposal__el-content-wrapper">
-            <div class="proposal__el-content">
-              <span class="proposal__el-subtitle">
-                для
-                <span class="text_bold">начинающих предпринимателей</span>
-                с меньшими инвестициями
-              </span>
-              <span class="proposal__el-description">
-                пункт выдачи заказов из интернет-магазина с небольшым товарным
-                запасом
-              </span>
+          <div class="proposal__list">
+            <div class="proposal__el">
+              <div class="proposal__el-title-block">
+                <h3 class="proposal__el-title">магазин</h3>
+                <h3 class="proposal__el-num">01</h3>
+              </div>
+              <div class="proposal__el-content-wrapper">
+                <div class="proposal__el-content">
+                  <span class="proposal__el-subtitle">
+                    для тех, кто
+                    <span class="text_bold"
+                      >нацелен на максимальную прибыль</span
+                    >
+                  </span>
+                  <span class="proposal__el-description">
+                    полноценная торговая точка с обширным ассортиментом
+                  </span>
 
-              <ul class="proposal__el-list">
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">общие вложения:</div>
-                  <div class="proposal__el-list-el-value">до 2,2 млн ₽</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">площадь:</div>
-                  <div class="proposal__el-list-el-value">до 15 кв.м.</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">товарный запас:</div>
-                  <div class="proposal__el-list-el-value">до 1,5 млн ₽</div>
-                </li>
-                <li class="proposal__el-list-el">
-                  <div class="proposal__el-list-el-title">
-                    средняя чистая прибыль:
-                  </div>
-                  <div class="proposal__el-list-el-value">
-                    400 000 рублей в месяц
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="proposal__el-slider">
-              <img
-                src="@images/proposal/proposal01-2.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
-              <img
-                src="@images/proposal/proposal02.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
-              <img
-                src="@images/proposal/proposal03.jpg"
-                alt=""
-                class="proposal__el-slider-img"
-              />
+                  <ul class="proposal__el-list">
+                    <li class="proposal__el-list-el">
+                      <div class="proposal__el-list-el-title">
+                        общие вложения:
+                      </div>
+                      <div class="proposal__el-list-el-value">до 5,4 млн ₽</div>
+                    </li>
+                    <li class="proposal__el-list-el">
+                      <div class="proposal__el-list-el-title">площадь:</div>
+                      <div class="proposal__el-list-el-value">до 40 кв.м.</div>
+                    </li>
+                    <li class="proposal__el-list-el">
+                      <div class="proposal__el-list-el-title">
+                        товарный запас:
+                      </div>
+                      <div class="proposal__el-list-el-value">до 4 млн ₽</div>
+                    </li>
+                    <li class="proposal__el-list-el">
+                      <div class="proposal__el-list-el-title">
+                        средняя чистая прибыль:
+                      </div>
+                      <div class="proposal__el-list-el-value">
+                        800 000 рублей в месяц
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="proposal__el-slider">
+                  <img
+                    src="@images/proposal/proposal01.jpg"
+                    alt=""
+                    class="proposal__el-slider-img"
+                  />
+                  <img
+                    src="@images/proposal/proposal02.jpg"
+                    alt=""
+                    class="proposal__el-slider-img"
+                  />
+                  <img
+                    src="@images/proposal/proposal03.jpg"
+                    alt=""
+                    class="proposal__el-slider-img"
+                  />
+                </div>
+              </div>
             </div>
           </div>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="proposal__banner">
+
+  <div class="container proposal__container-bottom">
+    <div class="proposal__el">
+      <div class="proposal__el-title-block">
+        <h3 class="proposal__el-title">офис продаж</h3>
+        <h3 class="proposal__el-num">02</h3>
+      </div>
+      <div class="proposal__el-content-wrapper">
+        <div class="proposal__el-content">
+          <span class="proposal__el-subtitle">
+            для
+            <span class="text_bold">начинающих предпринимателей</span>
+            с меньшими инвестициями
+          </span>
+          <span class="proposal__el-description">
+            пункт выдачи заказов из интернет-магазина с небольшым товарным
+            запасом
+          </span>
+
+          <ul class="proposal__el-list">
+            <li class="proposal__el-list-el">
+              <div class="proposal__el-list-el-title">общие вложения:</div>
+              <div class="proposal__el-list-el-value">до 2,2 млн ₽</div>
+            </li>
+            <li class="proposal__el-list-el">
+              <div class="proposal__el-list-el-title">площадь:</div>
+              <div class="proposal__el-list-el-value">до 15 кв.м.</div>
+            </li>
+            <li class="proposal__el-list-el">
+              <div class="proposal__el-list-el-title">товарный запас:</div>
+              <div class="proposal__el-list-el-value">
+                до&nbsp;1,5&nbsp;млн&nbsp;₽
+              </div>
+            </li>
+            <li class="proposal__el-list-el">
+              <div class="proposal__el-list-el-title">
+                средняя чистая прибыль:
+              </div>
+              <div class="proposal__el-list-el-value">
+                400 000 рублей в месяц
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="proposal__el-slider">
+          <img
+            src="@images/proposal/proposal01-2.jpg"
+            alt=""
+            class="proposal__el-slider-img"
+          />
+          <img
+            src="@images/proposal/proposal02.jpg"
+            alt=""
+            class="proposal__el-slider-img"
+          />
+          <img
+            src="@images/proposal/proposal03.jpg"
+            alt=""
+            class="proposal__el-slider-img"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="proposal__banner">
     <ul class="proposal__banner-list">
       <li class="proposal__banner-el">продажа</li>
       <li class="proposal__banner-el">покупка</li>
@@ -211,5 +228,5 @@
       <li class="proposal__banner-el">сервис</li>
       <li class="proposal__banner-el">обмен</li>
     </ul>
-  </div>
+  </div> -->
 </section>
