--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -4,7 +4,7 @@
     <div class="reviews__title-block">
       <h2 class="title reviews__title">
         <span class="reviews__title-number">4 000</span>
-        положительных отзывов
+        <span class="reviews__title-text">положительных отзывов</span>
         <span class="reviews__title-offset text_green">
           и отметок в stories
         </span>
@@ -15,8 +15,11 @@
         узнали?». Сейчас 90% людей отвечают: «От знакомых».
       </p>
       <p class="reviews__text">
-        Нам доверяют, о нас пишут, рассказывают друзьям и коллегам, отмечают в
-        соцсетях — и есть за что получать такой фидбек от довольных клиентов.
+        <span class="reviews__text-br">
+          Нам доверяют, о нас пишут, рассказывают друзьям и коллегам, отмечают в
+          соцсетях —
+        </span>
+        и есть за что получать такой фидбек от довольных клиентов.
       </p>
       <p class="reviews__text">
         Каждый день стараемся делать крутой сервис, работаем на имя, на бренд,
@@ -127,8 +130,8 @@
   <div class="container">
     <div class="reviews__pre-form">
       <span class="reviews__pre-form-title">
-        Поможем и вам организовать обслуживание на таком уровне —
-        присоединяйтесь к команде
+        Поможем и вам организовать обслуживание на&nbsp;таком уровне —
+        присоединяйтесь к&nbsp;команде
       </span>
       <button class="button reviews__pre-form-button" type="button">
         получить презентацию
