--- a/src/html/section-top.html
+++ b/src/html/section-top.html
@@ -54,6 +54,45 @@
       </div>
     </div>
   </div>
+
+  <div class="section-top_bg-block section-top_bg-slider">
+    <div class="section-top_bg section-top_bg01">
+      <div class="container section-top__container">
+        <h1 class="title section-top__title section-top__title01">
+          <span class="text_green">франшиза </span>по продаже apple
+        </h1>
+      </div>
+    </div>
+    <div class="section-top_bg section-top_bg02">
+      <div class="container section-top__container">
+        <h1 class="title section-top__title section-top__title02">
+          откройте магазин
+          <span class="text_green">или</span>
+          офис продаж appzone.co
+        </h1>
+      </div>
+    </div>
+    <div class="section-top_bg section-top_bg03">
+      <div class="container section-top__container">
+        <h1 class="title section-top__title section-top__title03">
+          cредняя чистая прибыль —
+          <span class="text_green">
+            от 350 000 до 800 000 рублей в&nbsp;месяц
+          </span>
+        </h1>
+      </div>
+    </div>
+    <div class="section-top_bg section-top_bg04 last-slide">
+      <div class="container section-top__container">
+        <h1 class="title section-top__title section-top__title04">
+          организация поставок
+          <span class="text_green">независимо</span>
+          от экономической ситуации в стране
+        </h1>
+      </div>
+    </div>
+  </div>
+
   <div class="container section-top__container">
     <div class="section-top__usp">
       <!-- <h1 class="title section-top__title section-top__title01">
@@ -61,7 +100,7 @@
       </h1> -->
     </div>
     <p class="section-top__title-description">
-      получите презентацию и финансовый план франшизы appzone.co
+      получите презентацию и&nbsp;финансовый план франшизы appzone.co
     </p>
     <div class="section-top__bb">
       <button
