--- a/src/html/steps-diagram.html
+++ b/src/html/steps-diagram.html
@@ -8,129 +8,183 @@
 >
   <path
     d="M138 66.9003C177.821 39.0287 224.142 21.8689 272.51 17.0703"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-9"
+    class="steps__line"
   />
   <path
     d="M263.96 30.39L261.69 28.43L271.37 17.24L259.51 8.41L261.3 6L275.75 16.77L263.96 30.39Z"
     fill="#1775E7"
+    id="steps__arrow-9"
+    class="steps__arrow"
   />
   <path
     d="M25.8105 226.419C38.4754 179.482 62.9535 136.571 96.9106 101.779"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-8"
+    class="steps__line"
   />
   <path
     d="M98.9507 117.481L95.9507 117.441L96.1607 102.651L81.3907 103.521L81.2207 100.531L99.2007 99.4707L98.9507 117.481Z"
     fill="#1775E7"
+    id="steps__arrow-8"
+    class="steps__arrow"
   />
   <path
     d="M42.4991 420.7C25.0228 383.112 15.9944 342.152 16.0491 300.7C16.0491 293.6 16.3057 286.56 16.8191 279.58"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-7"
+    class="steps__line"
   />
   <path
     d="M28.49 290.229L26.16 292.129L16.8 280.679L6.06 290.859L4 288.669L17.08 276.279L28.49 290.229Z"
     fill="#1775E7"
+    id="steps__arrow-7"
+    class="steps__arrow"
   />
   <path
     d="M180.15 558.81C136.157 538.139 98.1573 506.596 69.7402 467.16"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-6"
+    class="steps__line"
   />
   <path
     d="M85.5491 467.87L84.9891 470.82L70.4591 468.06L68.7691 482.76L65.7891 482.41L67.8491 464.51L85.5491 467.87Z"
     fill="#1775E7"
+    id="steps__arrow-6"
+    class="steps__arrow"
   />
   <path
     d="M374.379 576.119C327.384 588.538 278.005 588.824 230.869 576.949"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-5"
+    class="steps__line"
   />
   <path
     d="M243.431 567.32L244.901 569.94L232.001 577.17L240.161 589.51L237.651 591.16L227.721 576.13L243.431 567.32Z"
     fill="#1775E7"
+    id="steps__arrow-5"
+    class="steps__arrow"
   />
   <path
     d="M534.251 464.51C506.281 504.264 468.644 536.237 424.891 557.41"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-4"
+    class="steps__line"
   />
   <path
     d="M428.329 541.949L431.139 543.009L425.889 556.849L440.069 561.059L439.219 563.939L421.949 558.799L428.329 541.949Z"
     fill="#1775E7"
+    id="steps__arrow-4"
+    class="steps__arrow"
   />
   <path
     d="M585 276.279C585.667 284.279 586 292.403 586 300.649C586.083 341.016 577.561 380.936 561 417.749"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-3"
+    class="steps__line"
   />
   <path
     d="M553.59 403.721L556.42 402.711L561.36 416.661L574.9 410.721L576.11 413.471L559.61 420.701L553.59 403.721Z"
     fill="#1775E7"
+    id="steps__arrow-3"
+    class="steps__arrow"
   />
   <path
     d="M502.91 99.4609C537.255 133.873 562.22 176.502 575.43 223.291"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-2"
+    class="steps__line"
   />
   <path
     d="M560.811 217.201L562.351 214.621L575.051 222.201L581.681 208.971L584.371 210.321L576.291 226.421L560.811 217.201Z"
     fill="#1775E7"
+    id="steps__arrow-2"
+    class="steps__arrow"
   />
   <path
     d="M326.359 16.7598C374.795 20.9987 421.324 37.6322 461.469 65.0598"
-    stroke="#1775E7"
+    stroke="#2e2e2e"
     stroke-width="3"
     stroke-miterlimit="10"
+    id="steps__line-1"
+    class="steps__line"
   />
   <path
     d="M446.361 69.7909L445.881 66.8209L460.481 64.4709L457.071 50.0809L459.991 49.3809L464.151 66.9209L446.361 69.7909Z"
     fill="#1775E7"
+    id="steps__arrow-1"
+    class="steps__arrow"
   />
   <path
     d="M301.051 21.6504C304.364 21.6504 307.051 18.9641 307.051 15.6504C307.051 12.3367 304.364 9.65039 301.051 9.65039C297.737 9.65039 295.051 12.3367 295.051 15.6504C295.051 18.9641 297.737 21.6504 301.051 21.6504Z"
     fill="url(#paint0_linear_411_680)"
+    id="steps__circle-9"
+    class="steps__circle"
   />
   <path
     d="M117.859 88.3301C121.173 88.3301 123.859 85.6438 123.859 82.3301C123.859 79.0164 121.173 76.3301 117.859 76.3301C114.546 76.3301 111.859 79.0164 111.859 82.3301C111.859 85.6438 114.546 88.3301 117.859 88.3301Z"
-    fill="url(#paint1_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-8"
+    class="steps__circle"
   />
   <path
     d="M20.3809 257.16C23.6946 257.16 26.3809 254.474 26.3809 251.16C26.3809 247.846 23.6946 245.16 20.3809 245.16C17.0671 245.16 14.3809 247.846 14.3809 251.16C14.3809 254.474 17.0671 257.16 20.3809 257.16Z"
-    fill="url(#paint2_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-7"
+    class="steps__circle"
   />
   <path
     d="M54.2305 449.15C57.5442 449.15 60.2305 446.464 60.2305 443.15C60.2305 439.837 57.5442 437.15 54.2305 437.15C50.9168 437.15 48.2305 439.837 48.2305 443.15C48.2305 446.464 50.9168 449.15 54.2305 449.15Z"
-    fill="url(#paint3_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-6"
+    class="steps__circle"
   />
   <path
     d="M203.58 574.461C206.894 574.461 209.58 571.775 209.58 568.461C209.58 565.147 206.894 562.461 203.58 562.461C200.266 562.461 197.58 565.147 197.58 568.461C197.58 571.775 200.266 574.461 203.58 574.461Z"
-    fill="url(#paint4_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-5"
+    class="steps__circle"
   />
   <path
     d="M398.529 574.461C401.843 574.461 404.529 571.775 404.529 568.461C404.529 565.147 401.843 562.461 398.529 562.461C395.216 562.461 392.529 565.147 392.529 568.461C392.529 571.775 395.216 574.461 398.529 574.461Z"
-    fill="url(#paint5_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-4"
+    class="steps__circle"
   />
   <path
     d="M547.869 449.15C551.183 449.15 553.869 446.464 553.869 443.15C553.869 439.837 551.183 437.15 547.869 437.15C544.555 437.15 541.869 439.837 541.869 443.15C541.869 446.464 544.555 449.15 547.869 449.15Z"
-    fill="url(#paint6_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-3"
+    class="steps__circle"
   />
   <path
     d="M581.721 257.16C585.034 257.16 587.721 254.474 587.721 251.16C587.721 247.846 585.034 245.16 581.721 245.16C578.407 245.16 575.721 247.846 575.721 251.16C575.721 254.474 578.407 257.16 581.721 257.16Z"
-    fill="url(#paint7_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-2"
+    class="steps__circle"
   />
   <path
     d="M484.25 88.3301C487.564 88.3301 490.25 85.6438 490.25 82.3301C490.25 79.0164 487.564 76.3301 484.25 76.3301C480.936 76.3301 478.25 79.0164 478.25 82.3301C478.25 85.6438 480.936 88.3301 484.25 88.3301Z"
-    fill="url(#paint8_linear_411_680)"
+    fill="#2e2e2e"
+    id="steps__circle-1"
+    class="steps__circle"
   />
   <defs>
     <linearGradient
