--- a/src/html/support.html
+++ b/src/html/support.html
@@ -1,6 +1,8 @@
 <section class="support">
   <div class="container support__container">
     <div class="support__navigation-block">
+      <h2 class="title support__title">пакет франшизы</h2>
+
       <p class="support__navigation-block-text">
         Сотрудничая с нами, каждый наш партнёр может рассчитывать на нашу
         поддержку, как на стадии запуска бизнеса, так и на протяжении всего
