--- a/src/html/founder.html
+++ b/src/html/founder.html
@@ -5,61 +5,65 @@
         за последний год наша команда достигла рекордной плановой выручки
         <span class="founder__title-offset text_green"> в 160 000 000 ₽ </span>
       </h2>
-    </div>
-  </div>
-  <div class="overflow">
-    <div class="container founder__container">
-      <div class="founder__content">
-        <div class="founder__content-block">
-          <div class="founder__text-wrapper">
+
+      <div class="overflow">
+        <div class="founder__content">
+          <div class="founder__content-block">
+            <div class="founder__text-wrapper">
+              <p class="founder__text">
+                Согласитесь, круто, когда человек видит ценность компании, видит
+                её историю на глазах. Как она развивается и становится сильнее.
+                Все привыкли видеть успех, большие очереди в магазине, но мало,
+                кто знает, как мы к нему пришли.
+              </p>
+              <p class="founder__text">
+                Моя история началась тем, что занимался продажей техники Apple,
+                как и многие, в социальных сетях. Решил, что хватит создавать
+                очереди из покупателей в подъезде собственного дома — кто-то
+                стоял на лестничной клетке, кто-то возле лифта.
+              </p>
+              <p class="founder__text">
+                Пора переходить из квадрата самозанятого в квадрат
+                предпринимателя. В 2016 году открыли первый магазин Appzone.co в
+                г. Брянск. Далее — в Курске, ещё 2 магазина — в Туле и Москве.
+              </p>
+            </div>
+            <span class="founder__slogan">нет&nbsp;границ</span>
             <p class="founder__text">
-              Согласитесь, круто, когда человек видит ценность компании, видит
-              её историю на глазах. Как она развивается и становится сильнее.
-              Все привыкли видеть успех, большие очереди в магазине, но мало,
-              кто знает, как мы к нему пришли.
+              Уже 5 лет я всерьёз занимаюсь проектом,
+              <span class="text_bold">
+                Appzone.co уже знают в 4-х городах России,
+              </span>
+              и вижу его перспективы в других городах России.
             </p>
-            <p class="founder__text">
-              Моя история началась тем, что занимался продажей техники Apple,
-              как и многие, в социальных сетях. Решил, что хватит создавать
-              очереди из покупателей в подъезде собственного дома — кто-то стоял
-              на лестничной клетке, кто-то возле лифта.
-            </p>
-            <p class="founder__text">
-              Пора переходить из квадрата самозанятого в квадрат
-              предпринимателя. В 2016 году открыли первый магазин Appzone.co в
-              г. Брянск. Далее — в Курске, ещё 2 магазина — в Туле и Москве.
-            </p>
-          </div>
-          <span class="founder__slogan">нет границ</span>
-          <p class="founder__text">
-            Пора переходить из квадрата самозанятого в квадрат предпринимателя.
-            В 2016 году открыли первый магазин Appzone.co в г. Брянск. Далее — в
-            Курске, ещё 2 магазина — в Туле и Москве.
-          </p>
-          <div class="founder__profile">
-            <img src="" alt="" />
-            <div class="founder__profile-block">
-              <span class="founder__profile-block-name">Дмитрий Цуканов</span>
-              <span class="founder__profile-block-post"
-                >Основатель сети Appzone.co</span
-              >
-              <div class="founder__profile-block-social">
-                <img src="" alt="" />
-                <span class="founder__profile-block-inst">@glonazis</span>
+            <div class="founder__profile">
+              <img src="@images/founder/founder__user-photo.jpg" alt="" />
+              <div class="founder__profile-block">
+                <span class="founder__profile-block-name">Дмитрий Цуканов</span>
+                <span class="founder__profile-block-post">
+                  Основатель сети Appzone.co
+                </span>
+                <div class="founder__profile-block-social">
+                  <img src="@images/founder/icon-inst.svg" alt="" />
+                  <span class="founder__profile-block-inst">@glonazis</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div class="founder__pre-form">
         <span class="founder__pre-form-title">
-          Присоединяйтесь к сильной команде — покорим рынок вместе!
+          Узнайте подробнее о развитии собственного бизнеса по Appzone.co
         </span>
         <button class="button founder__pre-form-button" type="button">
-          открыть бизнес
+          присоединиться к команде
         </button>
       </div>
     </div>
   </div>
+
   <div class="height"></div>
 </section>
