--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,14 +3,21 @@
     @@if(page === "index"){
     <a class="logo section-top__logo" href="#">
       <img src="@images/logo/logo.svg" class="logo__img" alt="logo" />
+      <span class="header__text">стильная зона Apple</span>
     </a>
 
     } @@if(page === "thanks"){
     <a class="logo section-top__logo" href="../index.html">
       <img src="@images/logo/logo.svg" class="logo__img" alt="logo" />
+      <span class="header__text">стильная зона Apple</span>
     </a>
     }
+
     <span class="header__text">стильная зона Apple</span>
+
+    <div class="header__order-call-mobile">
+      <img src="@images/icon/icon_order-call-m.svg" alt="" />
+    </div>
 
     <div class="order-call header__order-call">
       <img
