--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,27 @@
     <!-- prettier-ignore -->
     <main>
       @@include('./html/header.html',{ page: "index"})
-      @@include('./html/section-top.html')
-       @@include('./html/proposal.html') -->
-       <!--  @@include('./html/business-model.html') -->
-      <!-- @@include('./html/economy.html') -->
-      <!-- @@include('./html/demand.html')
-      @@include('./html/galery.html')
-      @@include('./html/reviews.html')
-      @@include('./html/support.html')
-      @@include('./html/steps.html')
-      @@include('./html/cities.html')
+      @@include('./html/section-top.html') 
+      
+      <!-- @@include('./html/proposal.html')
+      @@include('./html/reviews.html') -->
+    <!--   <div class="business-model__height-block">
+        <div class="business-model__sticky-block">
+          @@include('./html/business-model.html')
+          @@include('./html/economy.html')
+        </div>
+      </div>  -->
+      <!-- @@include('./html/support.html') -->
+      <!-- @@include('./html/founder.html')
+        @@include('./html/demand.html')
+      @@include('./html/galery.html') 
+      @@include('./html/apple.html')
+      <div class="steps__height-block">
+        <div class="steps__sticky-block">
+          @@include('./html/steps.html')
+          @@include('./html/cities.html')
+        </div>
+      </div>
       @@include('./html/bottom-block.html')
       @@include('./html/footer.html', { page: "index"}) -->
     </main>
